--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <title>Template Phaser</title>
+  <title>Phaser Scratch</title>
   <link rel="stylesheet" href="src/css/style.css">
   <script src="src/lib/phaser.min.js"></script>
 </head>
 <body class="page-body">
-
-<div id=version></div>
 
 <script type="module" src="src/js/index.js"></script>
 </body>
