--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <title>Phaser Scratch</title>
+  <title>Scratch</title>
   <link rel="stylesheet" href="src/css/style.css">
   <script src="src/lib/phaser.min.js"></script>
 </head>
